# rust_pico2w_https

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs
